--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -297,12 +297,12 @@ footer {
 }
 
 /* .hero {
-    background-image: url('images/background_portada.jpeg');
+    background-image: url('images/logotipo.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 100vh; /* Ocupa el 100% de la altura de la pantalla */ /*
-    display: flex;
+    height: 100vh; /* Ocupa el 100% de la altura de la pantalla */
+/*    display: flex;
     align-items: center;
     justify-content: center;
     color: white;
